// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component renders correctly 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <script>
      !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&false)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}else{c.add('light')}if(e==='light'||e==='dark'||!e)d.style.colorScheme=e||'light'}catch(e){}}()
    </script>
     
    <a
      href="/"
    >
      <img
        alt="wons-logo"
        data-nimg="1"
        decoding="async"
        fetchpriority="high"
        height="26"
        src="http://localhost/logo.svg"
        style="color: transparent;"
        width="42"
      />
    </a>
    <div
      class="fixed top-4 right-4"
    />
  </div>
</div>
`;

exports[`Logo component renders correctly and matches snapshot 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <script>
      !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&false)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}else{c.add('light')}if(e==='light'||e==='dark'||!e)d.style.colorScheme=e||'light'}catch(e){}}()
    </script>
     
    <a
      href="/"
    >
      <img
        alt="wons-logo"
        data-nimg="1"
        decoding="async"
        fetchpriority="high"
        height="56"
        src="http://localhost/logo.svg"
        style="color: transparent;"
        width="90"
      />
    </a>
    <div
      class="fixed top-4 right-4"
    />
  </div>
</div>
`;
